Mengupdate banner dan gallery

--- a/index.html
+++ b/index.html
@@ -18,13 +18,20 @@
     </div>
 
     <div id="banner">
-        Ini Banner
+        
     </div>
 
     <div id="gallery">
         <h2 class="gallery-title">Profile Pahlawan</h2>
         <div class="container">
-            <div class="card">Kartu</div>
+            <div class="card">
+                <div class="card-img"></div>
+                <div class="card-content">
+                    <h3>Card title</h3>
+                    <p>Card information</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, culpa.</p>
+                </div>
+            </div>
             <div class="card">Kartu</div>
             <div class="card">Kartu</div>
         </div>
