--- a/index.html
+++ b/index.html
@@ -25,15 +25,37 @@
         <h2 class="gallery-title">Profile Pahlawan</h2>
         <div class="container">
             <div class="card">
-                <div class="card-img"></div>
+                <div class="card-img">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Solid_gray.png" alt="skeleton">
+                </div>
                 <div class="card-content">
                     <h3>Card title</h3>
                     <p>Card information</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, culpa.</p>
                 </div>
             </div>
-            <div class="card">Kartu</div>
-            <div class="card">Kartu</div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Solid_gray.png" alt="skeleton">
+                </div>
+                <div class="card-content">
+                    <h3>Card title</h3>
+                    <p>Card information</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, culpa.</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Solid_gray.png" alt="skeleton">
+                </div>
+                <div class="card-content">
+                    <h3>Card title</h3>
+                    <p>Card information</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, culpa.</p>
+                </div>
+            </div>
         </div>
     </div>
 
