--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil Pahlawan</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="background-web">
+
+    </div>
     <div id="navbar">
         <ul>
             <a href="">Home</a>
             <a>|</a>
             <a href="#gallery">Gallery</a>
             <a>|</a>
-            <a href="">About</a>
+            <a href="/add.html">About</a>
         </ul>
     </div>
 
