--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 
 
     <div id="footer">
-        
-        <p id="currentTime"></p>
+        <p>&copy 2023 - Hackaton fsjf-sby01 Group 3</p>
     </div>
     <script src="index.js"></script>
     <script>
