--- a/add.html
+++ b/add.html
@@ -3,22 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style1.css">
     <title>Document</title>
 </head>
-<body>
-    <form>
-        <label for="nama">Nama</label>
-        <input type="text" name="nama">
-        <label for="nama">Tempat Lahir</label>
-        <input type="text" name="">
-        <label for="nama">Tanggal Lahir</label>
-        <input type="text" name="nama">
-        <label for="nama">Meninggal</label>
-        <input type="text" name="nama">
-        <label for="nama">image url</label>
-        <input type="text" name="nama">
-        <label for="nama">description</label>
-        <input type="text" name="nama">
-    </form>
+<body class="style1">
+        <form>
+            <table class="style2">
+                <tr>
+                  <td> <label for="nama">Nama</label></td>
+                  <td><input type="text" name="nama"></td>
+                </tr>
+                <tr>
+                    <td> <label for="nama">Tanggal Lahir</label></td>
+                    <td><input type="text" name="tanggallahir"></td>
+                  </tr>
+                  <tr>
+                    <td> <label for="nama">Meninggal</label></td>
+                    <td><input type="text" name="meninggal"></td>
+                  </tr>
+                  <tr>
+                    <td> <label for="nama">Image Url</label></td>
+                    <td><input type="text" name="imageurl"></td>
+                  </tr>
+                  <tr>
+                    <td> <label for="nama">Description</label></td>
+                    <td><input type="text" name="description"></td>
+                  </tr>
+                  <tr>
+                    <td colspan="2"><button class="button">ADD</button></td>
+                  </tr>
+              </table>
+        </form>
 </body>
 </html>
