--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a>|</a>
                 <a href="#gallery">Gallery</a>
                 <a>|</a>
-                <a href="/add.html">About</a>
+                <a id="add-pahlawan" href="#banner">Add pahlawan</a>
             </ul>
         </div>
  
@@ -39,6 +39,7 @@
             <h2 class="gallery-title">Profile Pahlawan</h2>
         </div>
     </div>
+
     <!-- DETAIL PAGE -->
     <div id="detail" style="display: none;" id = "1">
          <div class="top-content" id = >
@@ -61,6 +62,40 @@
         </div>  -->
     </div>
 
+    <!-- ADD PAGE -->
+    <div id="add-page" class="style1" style="display: none">
+        <div class="form-container">
+            <form onsubmit="submitForm(event)">
+              <div class="form-group">
+                <label for="nama">Nama:</label>
+                <input type="text" id="nama" name="nama" required>
+              </div>
+              <div class="form-group">
+                <label for="tempat-lahir">Tempat Lahir:</label>
+                <input type="text" id="tempat-lahir" name="tempat-lahir" required>
+              </div>
+              <div class="form-group">
+                <label for="tanggal_lahir">Tanggal Lahir:</label>
+                <input type="text" id="tanggal_lahir" name="tanggal_lahir" required>
+              </div>
+              <div class="form-group">
+                <label for="wafat">Wafat:</label>
+                <input type="text" id="wafat" name="wafat" required>
+              </div>
+              <div class="form-group">
+                <label for="img-src">Image Source:</label>
+                <input type="text" id="img-src" name="img-src" required>
+              </div>
+              <div class="form-group">
+                <label for="deskripsi">Deskripsi:</label>
+                <textarea type="text" id="deskripsi" name="deskripsi" required></textarea>
+              </div>
+              <div class="form-group">
+                <input id="submit" type="submit" value="Submit">
+              </div>
+            </form>
+          </div>
+    </div>
 
     <div id="footer">
         <p>&copy 2023 - Hackaton fsjf-sby01 Group 3</p>
